terraform/k8s/archs/arch2/templates/1_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public
  namespace: cloudacademy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: elb.host.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
